architecture/infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketly-ingress
  namespace: marketly
spec:
  ingressClassName: gce
  rules:
    - host: marketly.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-go
                port:
                  number: 80
